--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ stages:
 dco_check:
   stage: build
   script:
-   - # forcibly fail the job, a rule will skip this job of the commit message looked like the DCO was acknowledged.
-   - exit 420
+   - "# forcibly fail the job, a rule will skip this job of the commit message looked like the DCO was acknowledged.""
+   - "exit 420"
   rules:
    - if: $CI_COMMIT_MESSAGE=~ /Signed\-off\-by\:\ $CI_COMMIT_AUTHOR/
      when: never
