--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - build
+  - deploy
 
 dco_check:
   stage: build
@@ -14,7 +15,29 @@ setup_mgfxc:
 build_base:
   stage: build
   script: >
-    dotnet build src
+    dotnet build -c release src
+
+publish_linux:
+  stage: deploy
+  script: >
+    mkdir bin
+    dotnet publish src/SociallyDistant -r linux-x64 -c release --self-contained --no-build -o bin/linux-x64
   artifacts:
+    name: socially-distant-linux-amd64-release
     paths:
-      - src/SociallyDistant/bin/Debug/net8.0
+      - bin/linux-x64
+
+# Note: The no-build flag is not just an optimization. The runner runs Arch Linux, not Windows.
+# So we skip build during publish, otherwise custom MSBuild tasks won't run as a result of Linux trying to run a Windows binary.
+publish_windows:
+  stage: deploy
+  script: >  
+    mkdir bin    
+    dotnet publish src/SociallyDistant -r win-x64 -c release --no-build --self-contained -o bin/windows-x64
+  artifacts:
+    name: socially-distant-win64-release
+    paths:
+      - bin/windows-x64
+
+
+
