--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ publish_linux:
   stage: deploy
   script: >
     mkdir bin;
-    dotnet build -c release src/SociallyDistant;
+    dotnet build -c release src;
     dotnet publish src/SociallyDistant -r linux-x64 -c release --self-contained --no-build -o bin/linux-x64;
   artifacts:
     name: socially-distant-linux-amd64-release
@@ -35,7 +35,7 @@ publish_windows:
   stage: deploy
   script: >  
     mkdir bin;
-    dotnet build -c release src/SociallyDistant;
+    dotnet build -c release src;
     dotnet publish src/SociallyDistant -r win-x64 -c release --no-build --self-contained -o bin/windows-x64;
   artifacts:
     name: socially-distant-win64-release
