--- a/src/SociallyDistant/SociallyDistant.csproj
+++ b/src/SociallyDistant/SociallyDistant.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
+    <RuntimeIdentifiers>linux-x64;win-x64</RuntimeIdentifiers>
   </PropertyGroup>
   
   <!-- Asset importer overrides -->
