--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ publish_linux:
 
 publish_windows:
   stage: deploy
-  tag: windows
+  tags: [windows]
   script: >
     mkdir bin;
     dotnet publish .\src\SociallyDistant -r win-x64 -c release --self-contained -o .\bin\windows-x64;
