Add support for mission objectives
* Add support for the Mission FAil screen.

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Add support for mission failing

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Add support for Mission Complete screen

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Hide Challenges list in Info Panel when no challenges are active

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Add wait task for missions, and fix objectives not being cleaned up after complete/fail

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Add placeholder newciphertoday network for test mission

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Fix sdsh parallel instructions not actually awaiting their sub-instructions concurrently

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Clean up mission info widget when a mission is abandoned

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Add suppotrt for showing objectivs as check lists in Info Panel

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Display current mission in Info Panel

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Fix various issues with how objectives execute

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Fix NetworkUpdateHook not firing on world updates

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Add Ping, DeleteFile, and WriteFile mission tasks

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Add support for file system events on the Event Bus

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Add support for modifying device filesystems in missions

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Use Event Bus to fix issue where mission embeds don't react to missions being abandoned/completed

Signed-off-by: Ritchie Frodomar <alkalinethunder@gmail.com>

* Add support for

--- a/src/SociallyDistant.Framework/SociallyDistant.Framework.csproj
+++ b/src/SociallyDistant.Framework/SociallyDistant.Framework.csproj
@@ -6,6 +6,7 @@
         <Nullable>enable</Nullable>
         <RootNamespace>SociallyDistant.Core</RootNamespace>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
