--- a/src/SociallyDistant/SociallyDistant.csproj
+++ b/src/SociallyDistant/SociallyDistant.csproj
@@ -7,6 +7,8 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
+    <RuntimeIdentifiers>linux-x64;win-x64</RuntimeIdentifiers>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   
   <!-- Asset importer overrides -->
